--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "install:child-react17": "cd dev/children/react17 && yarn",
     "install:child-vue2": "cd dev/children/vue2 && yarn",
     "install:child-vue3": "cd dev/children/vue3 && yarn",
-    "install:child-vite": "cd dev/children/vite && yarn",
+    "install:child-vite2": "cd dev/children/vite2 && yarn",
     "install:child-angular11": "cd dev/children/angular11 && yarn",
     "main-react16": "cd dev/main-react16 && yarn start",
     "main-vue2": "cd dev/main-vue2 && yarn start",
@@ -33,7 +33,7 @@
     "start-child:react17": "cd dev/children/react17 && yarn start",
     "start-child:vue2": "cd dev/children/vue2 && yarn start",
     "start-child:vue3": "cd dev/children/vue3 && yarn start",
-    "start-child:vite": "cd dev/children/vite && yarn start",
+    "start-child:vite2": "cd dev/children/vite2 && yarn start",
     "start-child:angular11": "cd dev/children/angular11 && yarn start",
     "docs": "docsify serve docs --port 2000",
     "lint": "eslint --cache '**/*.{js,ts}'",
