--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@micro-zoe/micro-app",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "A lightweight, efficient and powerful micro front-end framework",
   "private": false,
   "main": "lib/index.min.js",
@@ -46,7 +46,7 @@
     "test:coverage": "jest --coverage",
     "test:unit": "jest src/__tests__/unit",
     "test:unit:coverage": "npm run test:unit -- --coverage",
-    "prepublishOnly": "yarn lint && yarn test && yarn build"
+    "prepublishOnly": "yarn build"
   },
   "repository": {
     "type": "git",
