--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "eslint-plugin-standard": "~5.0.0",
     "fs-extra": "~10.0.0",
     "gzip-size": "~6.0.0",
-    "husky": "~4.3.6",
-    "jest": "26.6.0",
+    "husky": "^8.0.3",
+    "jest": "~26.6.0",
     "lint-staged": "~10.5.3",
     "live-server": "~1.2.1",
     "node-fetch": "~2.6.1",
@@ -126,7 +126,7 @@
     "react": "~17.0.2",
     "rollup": "~2.35.1",
     "rollup-plugin-terser": "~7.0.2",
-    "ts-jest": "26.5.6",
+    "ts-jest": "~26.5.6",
     "typescript": "~4.1.3"
   }
 }
