--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "eslint-plugin-standard": "~5.0.0",
     "fs-extra": "~10.0.0",
     "gzip-size": "~6.0.0",
-    "husky": "^8.0.3",
+    "husky": "~4.3.6",
     "jest": "~26.6.0",
     "lint-staged": "~10.5.3",
     "live-server": "~1.2.1",
