docs: add vite4 demo

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "install:child-vue2": "cd dev/children/vue2 && yarn",
     "install:child-vue3": "cd dev/children/vue3 && yarn",
     "install:child-vite2": "cd dev/children/vite2 && yarn",
+    "install:child-vite4": "cd dev/children/vite4 && yarn",
     "install:child-angular11": "cd dev/children/angular11 && yarn",
     "main-react16": "cd dev/main-react16 && yarn start",
     "main-vue2": "cd dev/main-vue2 && yarn start",
@@ -34,6 +35,7 @@
     "start-child:vue2": "cd dev/children/vue2 && yarn start",
     "start-child:vue3": "cd dev/children/vue3 && yarn start",
     "start-child:vite2": "cd dev/children/vite2 && yarn start",
+    "start-child:vite4": "cd dev/children/vite4 && yarn start",
     "start-child:angular11": "cd dev/children/angular11 && yarn start",
     "docs": "docsify serve docs --port 2000",
     "lint": "eslint --cache '**/*.{js,ts}'",
