--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@rollup/plugin-babel": "~5.2.2",
     "@rollup/plugin-node-resolve": "~11.0.1",
     "@rollup/plugin-replace": "~2.4.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "~8.1.0",
     "@types/jest": "~26.0.24",
     "@types/node": "~14.14.19",
